# cassette

./: .env.template  .gitignore  AGENTS.md  CASSETTE_MULTIAGENT_ENGINE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  engine_pipeline_backlog_20260331.txt  engine_pipeline_interruption_resume_proof_20260331.txt  engine_pipeline_missing_track_number_fix_20260331.txt  engine_pipeline_missing_track_proof_20260331.txt  engine_pipeline_proof_20260331.txt  engine_pipeline_proof_after_match_fix_20260331.txt  engine_pipeline_proof_after_normalized_title_fix_20260331.txt  engine_pipeline_proof_clean_reconcile_20260331.txt  engine_pipeline_state_recovery_20260331.txt  engine_pipeline_state_recovery_after_fk_fix_20260331.txt  organize_dry_run_20260331.txt  organize_dry_run_after_organizer_fix_20260331.txt  organize_dry_run_after_rescue_20260331.txt  organize_dry_run_after_singles_fix_20260331.txt  spotify_backlog_run2_20260331.txt  spotify_backlog_run3_20260331.txt  spotify_backlog_run4_20260331.txt  spotify_backlog_run_20260331.txt  tag_rescue_report_20260331.json
CassPractice/: notes.txt
crates/cassette-core/: Cargo.toml
crates/cassette-core/examples/: audit_audio_deadspots.rs  audit_library_placement_and_size.rs  build_library_cleanup_manifest.rs  check_whole_library.rs  proof_download.rs
crates/cassette-core/src/: acquisition.rs  identity.rs  lib.rs  metadata.rs  orchestrator.rs  provider_settings.rs  sources.rs
crates/cassette-core/src/custodian/: config.rs  error.rs  mod.rs  orchestrator.rs
crates/cassette-core/src/custodian/collision/: mod.rs  policies.rs  resolution.rs
crates/cassette-core/src/custodian/custody_log/: manifest.rs  mod.rs  persistence.rs
crates/cassette-core/src/custodian/quality/: codec_info.rs  duplicates.rs  mod.rs
crates/cassette-core/src/custodian/quarantine/: directory_structure.rs  mod.rs  reason_codes.rs
crates/cassette-core/src/custodian/sort/: canonical_path.rs  mod.rs  sanitize.rs
crates/cassette-core/src/custodian/staging/: copy_verify_delete.rs  mod.rs  verification.rs
crates/cassette-core/src/custodian/sync/: delta_queue_sync.rs  local_files_update.rs  mod.rs
crates/cassette-core/src/custodian/validation/: deep_check.rs  heuristics.rs  mod.rs  symphonia_probe.rs
crates/cassette-core/src/db/: mod.rs
crates/cassette-core/src/director/: config.rs  engine.rs  error.rs  finalize.rs  metadata.rs  mod.rs  models.rs  provider.rs  scoring.rs  strategy.rs  temp.rs  types.rs  validation.rs
crates/cassette-core/src/director/download/: batch.rs  mod.rs  resume.rs  single.rs  staging.rs
crates/cassette-core/src/director/providers/: crypto.rs  deezer.rs  jackett.rs  local_archive.rs  mod.rs  qobuz.rs  real_debrid.rs  slskd.rs  usenet.rs  ytdlp.rs
crates/cassette-core/src/director/resilience/: backoff.rs  health_check.rs  mod.rs  range_request.rs
crates/cassette-core/src/director/sources/: bandcamp.rs  http.rs  local_cache.rs  mod.rs  provider_bridge.rs  spotify.rs  youtube.rs
crates/cassette-core/src/downloader/: mod.rs  real_debrid.rs
crates/cassette-core/src/gatekeeper/: config.rs  error.rs  mod.rs  mod_types.rs  orchestrator.rs
crates/cassette-core/src/librarian/: config.rs  error.rs  mod.rs  models.rs  observability.rs  orchestrator.rs
crates/cassette-core/src/models/: mod.rs
crates/cassette-core/src/orchestrator/: config.rs  error.rs  types.rs
crates/cassette-core/src/player/: mod.rs
crates/cassette-core/src/validation/: error.rs  logging.rs  mod.rs  spotify_import.rs  test_library.rs
crates/cassette-core/tests/: downloaders_smoke.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: album_resolver.rs  lib.rs  main.rs  now_playing.rs  pending_recovery.rs  runtime_bootstrap.rs  slskd_runtime.rs  spotify_history.rs  state.rs  trust_ledger.rs
src-tauri/src/commands/: dead_letter.rs  downloads.rs  import.rs  library.rs  mod.rs  organize.rs  planner.rs  player.rs  playlists.rs  queue.rs  settings.rs
src-tauri/tests/: pure_logic.rs
ui/: README.md  (+3 more)
(+311 files in other folders)
