[package]
name = "cassette"
version = "0.1.0"
description = "Cassette - music player and downloader"
authors = ["you"]
license = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "cassette"

[lib]
name = "cassette_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
test = false
doctest = false

[features]
default = []
deezer_private_api = []

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
cassette-core = { path = "../crates/cassette-core" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2"
tauri-plugin-global-shortcut = "2"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
walkdir = "2"
rayon = "1.10.0"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }

[[bin]]
name = "organize_cli"
path = "src/bin/organize_cli.rs"

[[bin]]
name = "batch_download_cli"
path = "src/bin/batch_download_cli.rs"

[[bin]]
name = "tag_rescue_cli"
path = "src/bin/tag_rescue_cli.rs"

[[bin]]
name = "engine_pipeline_cli"
path = "src/bin/engine_pipeline_cli.rs"

[[bin]]
name = "torrent_album_cli"
path = "src/bin/torrent_album_cli.rs"

[[bin]]
name = "slskd_album_cli"
path = "src/bin/slskd_album_cli.rs"

[[bin]]
name = "db_converge_cli"
path = "src/bin/db_converge_cli.rs"
